[package]
name = 'rinfa'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'rinfa'

[dependencies]
# lots of changes since 0.4.0
extendr-api = { git = "https://github.com/extendr/extendr" }
linfa = '*'
linfa-linear = '*'
linfa-trees = "0.7.0"
linfa-datasets = { version = "0.7", features = ["diabetes"] }
ndarray = "=0.15.6"
ndarray-csv = "0.4"
